fix: do not show DaR/S followsetting button for legacy

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -193,7 +193,7 @@
   "followSettingDisabled": "Messages you send will no longer disappear. Are you sure you want to turn off disappearing messages?",
   "followSettingTimeAndType": "Set your messages to disappear $time$ after they have been $type$?",
   "youChangedTheTimer": "<b>You</b> have set messages to disappear <b>$time$</b> after they have been <b>$mode$</b>",
-  "youChangedTheTimerLegacy": "<b>You<b> set the disappearing message timer to <b>$time$</b>",
+  "youChangedTheTimerLegacy": "<b>You</b> set the disappearing message timer to <b>$time$</b>",
   "theyChangedTheTimer": "<b>$name$</b> has set messages to disappear <b>$time$</b> after they have been <b>$mode$</b>",
   "theyChangedTheTimerLegacy": "<b>$name$</b> set the disappearing message timer to <b>$time$</b>",
   "timerOption_0_seconds": "Off",
