fix: add way to render group update add with history

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -233,11 +233,12 @@
   "disappearingMessagesModeLegacy": "Legacy",
   "disappearingMessagesModeLegacySubtitle": "Original version of disappearing messages.",
   "disappearingMessagesDisabled": "Disappearing messages disabled",
-  "disabledDisappearingMessages": "<b>$name$</b> has turned <b>off</b> disappearing messages.",
-  "youDisabledDisappearingMessages": "<b>You</b> have turned <b>off</b> disappearing messages.",
-  "youDisabledYourDisappearingMessages": "<b>You</b> turned <b>off</b> disappearing messages. Messages you send will no longer disappear.",
+  "groupDisabledDisappearingMessages": "<b>$name$</b> has turned disappearing messages <b>off</b>.",
+  "updateDisappearingMessagesFallback": "<b>$name$</b> updated disappearing message settings.",
+  "youDisabledDisappearingMessages": "<b>You</b> have turned disappearing messages <b>off</b>.",
+  "youDisabledYourDisappearingMessages": "<b>You</b> turned disappearing messages <b>off</b>. Messages you send will no longer disappear.",
   "youSetYourDisappearingMessages": "<b>You</b> set your messages to disappear <b>$time$</b> after they have been <b>$type$</b>.",
-  "theyDisabledTheirDisappearingMessages": "<b>$name$</b> has turned <b>off</b> disappearing messages. Messages they send will no longer disappear.",
+  "theyDisabledTheirDisappearingMessages": "<b>$name$</b> has turned disappearing messages <b>off</b>. Messages they send will no longer disappear.",
   "theySetTheirDisappearingMessages": "<b>$name$</b> has set their messages to disappear <b>$time$</b> after they have been <b>$type$</b>.",
   "timerSetTo": "Disappearing message time set to $time$",
   "set": "Set",
@@ -271,10 +272,15 @@
   "groupNameChangeFallback": "Group name updated.",
   "groupAvatarChange": "Group display picture updated.",
 
-  "groupOneJoined": "<b>$name$</b> joined the group.",
-  "groupYouJoined": "<b>You</b> joined the group.",
-  "groupTwoJoined": "<b>$first$</b> and <b>$second$</b> joined the group.",
-  "groupOthersJoined": "<b>$name$</b> and <b>$count$ others</b> joined the group.",
+  "groupOneJoined": "<b>$name$</b> was invited to join the group.",
+  "groupYouJoined": "<b>You</b> were invited to join the group.",
+  "groupTwoJoined": "<b>$first$</b> and <b>$second$</b> were invited to join the group.",
+  "groupOthersJoined": "<b>$name$</b> and <b>$count$ others</b> were invited to join the group.",
+
+  "groupOneJoinedWithHistory": "<b>$name$</b> was invited to join the group. Chat history was shared.",
+  "groupYouJoinedWithHistory": "<b>You</b> were invited to join the group. Chat history was shared.",
+  "groupTwoJoinedWithHistory": "<b>$first$</b> and <b>$second$</b> were invited to join the group. Chat history was shared.",
+  "groupOthersJoinedWithHistory": "<b>$name$</b> and <b>$count$ others</b> were invited to join the group. Chat history was shared.",
 
   "groupOneRemoved": "<b>$name$</b> was removed from the group.",
   "groupYouRemoved": "<b>You</b> were removed from the group.",
