fix: fix small ui issues after merge of multiple PRs

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -41,7 +41,7 @@
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be saved to your desktop.",
   "reportIssue": "Report a Bug",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "Mark Read",
   "incomingError": "Error handling incoming message",
   "media": "Media",
   "mediaEmptyState": "No media",
@@ -79,7 +79,7 @@
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
   "downloadAttachment": "Download Attachment",
-  "replyToMessage": "Reply to message",
+  "replyToMessage": "Reply",
   "replyingToMessage": "Replying to:",
   "originalMessageNotFound": "Original message not found",
   "you": "You",
@@ -107,13 +107,10 @@
   "deleteMessagesConfirmation": "Permanently delete the messages in this conversation?",
   "hideConversation": "Hide Conversation",
   "hideNoteToSelfConfirmation": "Are you sure you want to hide your <b>Note to Self</b> conversation?",
-  "hideConversationFailed": "Failed to hide the Conversation!",
-  "hideConversationFailedPleaseTryAgain": "Unable to hide the conversation, please try again",
   "deleteConversation": "Delete Conversation",
   "deleteConversationConfirmation": "Are you sure you want to delete your conversation with <b>$name$</b>?",
   "deleteConversationFailed": "Failed to delete the Conversation!",
   "deleteConversationFailedPleaseTryAgain": "Unable to delete the conversation, please try again",
-  "hiding": "Hiding...",
   "leaving": "Leaving...",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
@@ -126,6 +123,7 @@
   "groupMembers": "Members",
   "moreInformation": "More information",
   "failed": "Failed",
+  "failedToSendMessage": "Failed to send message",
   "read": "Read",
   "resend": "Resend",
   "clear": "Clear",
