--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -197,6 +197,11 @@
   "timerModeRead": "read",
   "timerModeSent": "sent",
   "confirm": "Confirm",
+  "messageHash": "Message Hash",
+  "serverId": "Server ID",
+  "expirationType": "Expiration Type",
+  "expirationDuration": "Expiration Duration",
+  "disappears": "Disappears",
   "followSetting": "Follow Setting",
   "followSettingDisabled": "Messages you send will no longer disappear. Are you sure you want to turn off disappearing messages?",
   "followSettingTimeAndType": "Set your messages to disappear <b>$time$</b> after they have been <b>$type$</b>?",
