feat: added SessionProgressBar
added copy for onboarding account loading

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -577,5 +577,7 @@
   "resolution": "Resolution",
   "duration": "Duration",
   "notApplicable": "N/A",
-  "unknownError": "Unknown Error"
+  "unknownError": "Unknown Error",
+  "waitOneMoment": "One moment please...",
+  "loadAccountProgressMessage": "Loading your account"
 }
