--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -341,7 +341,7 @@
   "leaveAndRemoveForEveryone": "Leave Group and Remove for Everyone",
   "leaveGroupConfirmation": "Are you sure you want to leave <b>$name$</b>?",
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
-  "leaveGroupConrirmationOnlyAdminLegacy": "Are you sure you want to leave <b>$name$</b>? This will deactivate the group for all members.",
+  "leaveGroupConrirmationOnlyAdminLegacy": "Because you are the creator of this group it will be deleted for everyone. This cannot be undone.",
   "leaveGroupConfirmationOnlyAdmin": "You are the only admin in <b>$name$</b>",
   "leaveGroupConfirmationOnlyAdminWarning": "Group settings and members cannot be changed without an admin",
   "leaveGroupFailed": "Failed to leave Group!",
@@ -484,7 +484,7 @@
   "closedGroupInviteSuccessMessage": "Successfully invited group members",
   "notificationForConvo": "Notifications",
   "notificationForConvo_all": "All",
-  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_disabled": "Mute",
   "notificationForConvo_mentions_only": "Mentions only",
   "onionPathIndicatorTitle": "Path",
   "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
@@ -582,7 +582,7 @@
   "mustBeApproved": "This conversation must be accepted to use this feature",
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
-  "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "clearAllConfirmationBody": "Are you sure you want to clear all message and group requests?",
   "thereAreNoMessagesIn": "There are no messages in <b>$name$</b>.",
   "noMessagesInBlindedDisabledMsgRequests": "<b>$name$</b> has message requests from Community conversations turned off, so you cannot send them a message.",
   "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
