fix: add withAcceleratorPrefix function to remove accelerator prefixes from locale strings

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -2,14 +2,11 @@
   "copyErrorAndQuit": "Copy error and quit",
   "unknown": "Unknown",
   "databaseError": "Database Error",
-  "mainMenuFile": "&File",
-  "mainMenuEdit": "&Edit",
-  "mainMenuView": "&View",
-  "mainMenuWindow": "&Window",
-  "mainMenuHelp": "&Help",
-  "appMenuHide": "Hide",
-  "appMenuHideOthers": "Hide Others",
-  "appMenuUnhide": "Show All",
+  "file": "File",
+  "edit": "Edit",
+  "view": "View",
+  "window": "Window",
+  "sessionHelp": "Help",
   "appMenuQuit": "Quit Session",
   "editMenuUndo": "Undo",
   "editMenuRedo": "Redo",
