--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -586,7 +586,9 @@
   "privacyPolicy": "Privacy Policy",
   "displayNamePick": "Pick your display name",
   "displayNameDescription": "It can be your real name, an alias, or anything else you like — and you can change it any time.",
-  "invalidDisplayNameTooLong": "Please enter a shorter display name.",
+  "displayNameErrorDescriptionShorter": "Please pick a shorter display name",
   "onboardingAccountCreated": "Account Created",
-  "onboardingBubbleWelcomeToSession": "Welcome to Session"
+  "onboardingBubbleWelcomeToSession": "Welcome to Session",
+  "conversationsNone": "You don't have any conversations yet",
+  "onboardingHitThePlusButton": "Hit the plus button to start a chat, create a group, or join an official community!"
 }
