--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -592,5 +592,8 @@
   "onboardingAccountCreate": "Create account",
   "onboardingAccountExists": "I have an account",
   "sessionRecoveryPassword": "Recovery Password",
-  "onboardingRecoveryPassword": "Enter your recovery password to load your account. If you haven't saved it, you can find it in your app settings."
+  "onboardingRecoveryPassword": "Enter your recovery password to load your account. If you haven't saved it, you can find it in your app settings.",
+  "recoveryPasswordErrorMessageShort": "The Recovery Password you entered is not long enough. Please check and try again.",
+  "recoveryPasswordErrorMessageIncorrect": "Some of the words in your Recovery Password are incorrect. Please check and try again.",
+  "recoveryPasswordErrorMessageGeneric": "Please check your recovery password and try again."
 }
