feat: session id to account id

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -8,7 +8,6 @@
   "addingContacts": "Adding contacts to $name$",
   "addModerator": "Add Admin",
   "addModerators": "Add Admins",
-  "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "anonymous": "Anonymous",
   "answeredACall": "Call with $name$",
   "appearanceSettingsTitle": "Appearance",
@@ -107,7 +106,7 @@
   "copyErrorAndQuit": "Copy error and quit",
   "copyMessage": "Copy message text",
   "copyOpenGroupURL": "Copy Group URL",
-  "copySessionID": "Copy Session ID",
+  "accountIDCopy": "Copy Account ID",
   "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "create": "Create",
   "createClosedGroupNamePrompt": "Group Name",
@@ -116,7 +115,6 @@
   "createConversationNewGroup": "Create a group with existing contacts",
   "createGroup": "Create Group",
   "createPassword": "Create your password",
-  "createSessionID": "Create Session ID",
   "databaseError": "Database Error",
   "debugLog": "Debug Log",
   "debugLogExplanation": "This log will be saved to your desktop.",
@@ -195,9 +193,8 @@
   "enterPassword": "Please enter your password",
   "enterRecoveryPhrase": "Enter your recovery phrase",
   "enterSendNewMessageDescription": "ENTER sends a message, SHIFT + ENTER starts a new line",
-  "enterSessionID": "Enter Session ID",
-  "enterSessionIDOfRecipient": "Enter your contact's Session ID or ONS",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "accountIdEnter": "Enter Account ID",
+  "accountIdEnterYourFriends": "Enter your friend's Account ID or ONS",
   "entireAccount": "Clear Device and Network",
   "error": "Error",
   "establishingConnection": "Establishing connection...",
@@ -241,12 +238,12 @@
   "incomingError": "Error handling incoming message",
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "invalidGroupNameTooShort": "Please enter a group name",
-  "invalidNumberError": "Please check the Session ID or ONS name and try again",
+  "onsErrorNotRecognised": "We couldn't recognise this ONS. Please check it and try again.",
   "invalidOldPassword": "Old password is invalid",
   "invalidOpenGroupUrl": "Invalid URL",
   "invalidPassword": "Invalid password",
   "invalidPubkeyFormat": "Invalid Pubkey Format",
-  "invalidSessionId": "Invalid Session ID",
+  "invalidAccountId": "Invalid Account ID",
   "inviteContacts": "Invite Contacts",
   "join": "Join",
   "joinACommunity": "Join a community",
@@ -425,7 +422,7 @@
   "recoveryPasswordErrorMessageShort": "The Recovery Password you entered is not long enough. Please check and try again.",
   "recoveryPhrase": "Recovery Phrase",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
-  "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
+  "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Account ID — you can use it to restore your Account ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "remove": "Remove",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "removeAccountPasswordTitle": "Remove Password",
@@ -443,7 +440,7 @@
   "requestsSubtitle": "Pending Requests",
   "resend": "Resend",
   "resolution": "Resolution",
-  "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "messageRequestsAcceptDescription": "Sending a message to this user will automatically accept their message request and reveal your Account ID.",
   "restoreUsingRecoveryPhrase": "Restore your account",
   "ringing": "Ringing...",
   "save": "Save",
@@ -494,7 +491,7 @@
   "startedACall": "You called $name$",
   "startInTrayDescription": "Keep Session running in the background when you close the window.",
   "startInTrayTitle": "Keep in System Tray",
-  "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
+  "messageNewDescription": "Start a new conversation by entering someone's Account ID or scanning their QR code.",
   "support": "Support",
   "surveyTitle": "We'd Love Your Feedback",
   "termsOfService": "Terms of Service",
@@ -594,8 +591,7 @@
   "youGotKickedFromGroup": "You were removed from the group.",
   "youHaveANewFriendRequest": "You have a new friend request",
   "youLeftTheGroup": "You have left the group.",
-  "yourSessionID": "Your Session ID",
-  "yourUniqueSessionID": "Say hello to your Session ID",
+  "accountIdYours": "Your Account ID",
   "youSetYourDisappearingMessages": "<b>You</b> set your messages to disappear <b>$time$</b> after they have been <b>$type$</b>.",
   "zoomFactorSettingTitle": "Zoom Factor"
 }
