feat: recovery phrase to recovery password

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -191,7 +191,7 @@
   "enterNewLineDescription": "SHIFT + ENTER sends a message, ENTER starts a new line",
   "enterNewPassword": "Please enter your new password",
   "enterPassword": "Please enter your password",
-  "enterRecoveryPhrase": "Enter your recovery phrase",
+  "recoveryPasswordEnter": "Enter your recovery password",
   "enterSendNewMessageDescription": "ENTER sends a message, SHIFT + ENTER starts a new line",
   "accountIdEnter": "Enter Account ID",
   "accountIdEnterYourFriends": "Enter your friend's Account ID or ONS",
@@ -420,9 +420,7 @@
   "recoveryPasswordErrorMessageGeneric": "Please check your recovery password and try again.",
   "recoveryPasswordErrorMessageIncorrect": "Some of the words in your Recovery Password are incorrect. Please check and try again.",
   "recoveryPasswordErrorMessageShort": "The Recovery Password you entered is not long enough. Please check and try again.",
-  "recoveryPhrase": "Recovery Phrase",
-  "recoveryPhraseEmpty": "Enter your recovery phrase",
-  "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Account ID — you can use it to restore your Account ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
+  "recoveryPhraseSavePromptMain": "Your recovery password is the master key to your Account ID — you can use it to restore your Account ID if you lose access to your device. Store your recovery password in a safe place, and don't give it to anyone.",
   "remove": "Remove",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "removeAccountPasswordTitle": "Remove Password",
@@ -441,7 +439,6 @@
   "resend": "Resend",
   "resolution": "Resolution",
   "messageRequestsAcceptDescription": "Sending a message to this user will automatically accept their message request and reveal your Account ID.",
-  "restoreUsingRecoveryPhrase": "Restore your account",
   "ringing": "Ringing...",
   "save": "Save",
   "saved": "Saved",
@@ -457,8 +454,8 @@
   "sendFailed": "Send Failed",
   "sending": "Sending",
   "sendMessage": "Message",
-  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
-  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "recoveryPasswordWarningSendDescription": "This is your recovery password. If you send it to someone they'll have full access to your account.",
+  "warning": "Warning",
   "sent": "Sent",
   "serverId": "Server ID",
   "sessionMessenger": "Session",
@@ -478,8 +475,7 @@
   "shareBugDetails": "Export your logs, then upload the file though Session's Help Desk.",
   "show": "Show",
   "showDebugLog": "Export Logs",
-  "showRecoveryPhrase": "Recovery Phrase",
-  "showRecoveryPhrasePasswordRequest": "Please enter your password",
+  "passwordCreate": "Create your password",
   "showUserDetails": "Show User Details",
   "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "spellCheckDescription": "Enable spell check when typing messages.",
