feat: replace invalidAccountId with accountIdErrorInvalid
as based in google docs flagged sheet

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,11 @@
 {
   "about": "About",
   "accept": "Accept",
+  "accountIDCopy": "Copy Account ID",
+  "accountIdEnter": "Enter Account ID",
+  "accountIdEnterYourFriends": "Enter your friend's Account ID or ONS",
+  "accountIdYours": "Your Account ID",
+  "accountIdErrorInvalid": "This Account ID is invalid. Please check and try again.",
   "activeMembers": "$count$ active members",
   "add": "Add",
   "addACaption": "Add a caption...",
@@ -105,7 +110,6 @@
   "copyErrorAndQuit": "Copy error and quit",
   "copyMessage": "Copy message text",
   "copyOpenGroupURL": "Copy Group URL",
-  "accountIDCopy": "Copy Account ID",
   "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "create": "Create",
   "createClosedGroupNamePrompt": "Group Name",
@@ -190,10 +194,7 @@
   "enterNewLineDescription": "SHIFT + ENTER sends a message, ENTER starts a new line",
   "enterNewPassword": "Please enter your new password",
   "enterPassword": "Please enter your password",
-  "recoveryPasswordEnter": "Enter your recovery password",
   "enterSendNewMessageDescription": "ENTER sends a message, SHIFT + ENTER starts a new line",
-  "accountIdEnter": "Enter Account ID",
-  "accountIdEnterYourFriends": "Enter your friend's Account ID or ONS",
   "entireAccount": "Clear Device and Network",
   "error": "Error",
   "establishingConnection": "Establishing connection...",
@@ -237,12 +238,10 @@
   "incomingError": "Error handling incoming message",
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "invalidGroupNameTooShort": "Please enter a group name",
-  "onsErrorNotRecognised": "We couldn't recognise this ONS. Please check it and try again.",
   "invalidOldPassword": "Old password is invalid",
   "invalidOpenGroupUrl": "Invalid URL",
   "invalidPassword": "Invalid password",
   "invalidPubkeyFormat": "Invalid Pubkey Format",
-  "invalidAccountId": "Invalid Account ID",
   "inviteContacts": "Invite Contacts",
   "join": "Join",
   "joinACommunity": "Join a community",
@@ -276,6 +275,7 @@
   "linkVisitWarningTitle": "Open this link in your browser?",
   "loadAccountProgressMessage": "Loading your account",
   "loading": "Loading...",
+  "lockApp": "Lock App",
   "mainMenuEdit": "&Edit",
   "mainMenuFile": "&File",
   "mainMenuHelp": "&Help",
@@ -300,11 +300,13 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "messageHash": "Message Hash",
   "messageInfo": "Message Info",
+  "messageNewDescription": "Start a new conversation by entering someone's Account ID or scanning their QR code.",
   "messageRequestAccepted": "Your message request has been accepted",
   "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
   "messageRequestAcceptedOursNoName": "You have accepted the message request",
   "messageRequestPending": "Your message request is currently pending",
   "messageRequests": "Message Requests",
+  "messageRequestsAcceptDescription": "Sending a message to this user will automatically accept their message request and reveal your Account ID.",
   "messagesHeader": "Conversations",
   "messageWillDisappear": "Messages will disappear in $countAndUnit$",
   "moreInformation": "More information",
@@ -366,6 +368,7 @@
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "onlyGroupAdminsCanChange": "Only group admins can change this setting.",
+  "onsErrorNotRecognised": "We couldn't recognise this ONS. Please check it and try again.",
   "open": "Open",
   "openGroupInvitation": "Community invitation",
   "openGroupURL": "Community URL",
@@ -376,8 +379,8 @@
   "orJoinOneOfThese": "Or join one of these...",
   "otherPlural": "$number$ others",
   "otherSingular": "$number$ other",
-  "lockApp": "Lock App",
   "passwordCharacterError": "Password must only contain letters, numbers and symbols",
+  "passwordCreate": "Create your password",
   "passwordLengthError": "Password must be between 6 and 64 characters long",
   "passwordsDoNotMatch": "Passwords do not match",
   "passwordTypeError": "Password must be a string",
@@ -415,9 +418,11 @@
   "readReceiptSettingDescription": "Send read receipts in one-to-one chats.",
   "readReceiptSettingTitle": "Read Receipts",
   "received": "Received",
+  "recoveryPasswordEnter": "Enter your recovery password",
   "recoveryPasswordErrorMessageGeneric": "Please check your recovery password and try again.",
   "recoveryPasswordErrorMessageIncorrect": "Some of the words in your Recovery Password are incorrect. Please check and try again.",
   "recoveryPasswordErrorMessageShort": "The Recovery Password you entered is not long enough. Please check and try again.",
+  "recoveryPasswordWarningSendDescription": "This is your recovery password. If you send it to someone they'll have full access to your account.",
   "recoveryPhraseSavePromptMain": "Your recovery password is the master key to your Account ID — you can use it to restore your Account ID if you lose access to your device. Store your recovery password in a safe place, and don't give it to anyone.",
   "remove": "Remove",
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
@@ -436,7 +441,6 @@
   "requestsSubtitle": "Pending Requests",
   "resend": "Resend",
   "resolution": "Resolution",
-  "messageRequestsAcceptDescription": "Sending a message to this user will automatically accept their message request and reveal your Account ID.",
   "ringing": "Ringing...",
   "save": "Save",
   "saved": "Saved",
@@ -452,8 +456,6 @@
   "sendFailed": "Send Failed",
   "sending": "Sending",
   "sendMessage": "Message",
-  "recoveryPasswordWarningSendDescription": "This is your recovery password. If you send it to someone they'll have full access to your account.",
-  "warning": "Warning",
   "sent": "Sent",
   "serverId": "Server ID",
   "sessionMessenger": "Session",
@@ -473,7 +475,6 @@
   "shareBugDetails": "Export your logs, then upload the file though Session's Help Desk.",
   "show": "Show",
   "showDebugLog": "Export Logs",
-  "passwordCreate": "Create your password",
   "showUserDetails": "Show User Details",
   "someOfYourDeviceUseOutdatedVersion": "Some of your devices are using outdated versions. Syncing may be unreliable until they are updated.",
   "spellCheckDescription": "Enable spell check when typing messages.",
@@ -485,7 +486,6 @@
   "startedACall": "You called $name$",
   "startInTrayDescription": "Keep Session running in the background when you close the window.",
   "startInTrayTitle": "Keep in System Tray",
-  "messageNewDescription": "Start a new conversation by entering someone's Account ID or scanning their QR code.",
   "support": "Support",
   "surveyTitle": "We'd Love Your Feedback",
   "termsOfService": "Terms of Service",
@@ -572,6 +572,7 @@
   "viewMenuZoomOut": "Zoom Out",
   "voiceMessage": "Voice Message",
   "waitOneMoment": "One moment please...",
+  "warning": "Warning",
   "welcomeToYourSession": "Welcome to your Session",
   "windowMenuClose": "Close Window",
   "windowMenuMinimize": "Minimize",
@@ -585,7 +586,6 @@
   "youGotKickedFromGroup": "You were removed from the group.",
   "youHaveANewFriendRequest": "You have a new friend request",
   "youLeftTheGroup": "You have left the group.",
-  "accountIdYours": "Your Account ID",
   "youSetYourDisappearingMessages": "<b>You</b> set your messages to disappear <b>$time$</b> after they have been <b>$type$</b>.",
   "zoomFactorSettingTitle": "Zoom Factor"
 }
