fix: recover an account with a new display name if linking fails
added stop function to swarm polling

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -578,5 +578,6 @@
   "resolution": "Resolution",
   "duration": "Duration",
   "notApplicable": "N/A",
-  "unknownError": "Unknown Error"
+  "unknownError": "Unknown Error",
+  "displayNameErrorNew": "We were unable to load your display name. Please enter a new display name to continue."
 }
