fix: restore copyOpenGroupURL key
it is still used

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -109,6 +109,7 @@
   "copiedToClipboard": "Copied",
   "copyErrorAndQuit": "Copy error and quit",
   "copyMessage": "Copy message text",
+  "copyOpenGroupURL": "Copy Group URL",
   "couldntFindServerMatching": "Couldn't find the corresponding Community server",
   "create": "Create",
   "createClosedGroupPlaceholder": "Enter a group name",
