feat: added some localised strings the create convo screens

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -3,9 +3,9 @@
   "accept": "Accept",
   "accountIDCopy": "Copy Account ID",
   "accountIdEnter": "Enter Account ID",
+  "accountIdErrorInvalid": "This Account ID is invalid. Please check and try again.",
   "accountIdOrOnsEnter": "Enter Account ID or ONS",
   "accountIdYours": "Your Account ID",
-  "accountIdErrorInvalid": "This Account ID is invalid. Please check and try again.",
   "activeMembers": "$count$ active members",
   "add": "Add",
   "addACaption": "Add a caption...",
@@ -338,10 +338,10 @@
   "noSearchResults": "No results found for \"$searchTerm$\"",
   "notApplicable": "N/A",
   "noteToSelf": "Note to Self",
-  "notificationForConvo": "Notifications",
   "notificationForConvo_all": "All",
   "notificationForConvo_disabled": "Disabled",
   "notificationForConvo_mentions_only": "Mentions only",
+  "notificationForConvo": "Notifications",
   "notificationFrom": "From:",
   "notificationMostRecent": "Most recent:",
   "notificationMostRecentFrom": "Most recent from: $name$",
@@ -368,6 +368,7 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "onlyGroupAdminsCanChange": "Only group admins can change this setting.",
   "onsErrorNotRecognised": "We couldn't recognise this ONS. Please check it and try again.",
+  "onsErrorUnableToSearch": "We were unable to search for this ONS. Please try again later.",
   "open": "Open",
   "openGroupInvitation": "Community invitation",
   "openMessageRequestInbox": "Message Requests",
@@ -497,32 +498,32 @@
   "timer": "Timer",
   "timerModeRead": "read",
   "timerModeSent": "sent",
-  "timerOption_0_seconds": "Off",
   "timerOption_0_seconds_abbreviated": "off",
-  "timerOption_10_seconds": "10 seconds",
-  "timerOption_10_seconds_abbreviated": "10s",
-  "timerOption_12_hours": "12 hours",
-  "timerOption_12_hours_abbreviated": "12h",
-  "timerOption_1_day": "1 day",
+  "timerOption_0_seconds": "Off",
   "timerOption_1_day_abbreviated": "1d",
-  "timerOption_1_hour": "1 hour",
+  "timerOption_1_day": "1 day",
   "timerOption_1_hour_abbreviated": "1h",
-  "timerOption_1_minute": "1 minute",
+  "timerOption_1_hour": "1 hour",
   "timerOption_1_minute_abbreviated": "1m",
-  "timerOption_1_week": "1 week",
+  "timerOption_1_minute": "1 minute",
   "timerOption_1_week_abbreviated": "1w",
-  "timerOption_2_weeks": "2 weeks",
+  "timerOption_1_week": "1 week",
+  "timerOption_10_seconds_abbreviated": "10s",
+  "timerOption_10_seconds": "10 seconds",
+  "timerOption_12_hours_abbreviated": "12h",
+  "timerOption_12_hours": "12 hours",
   "timerOption_2_weeks_abbreviated": "2w",
-  "timerOption_30_minutes": "30 minutes",
+  "timerOption_2_weeks": "2 weeks",
   "timerOption_30_minutes_abbreviated": "30m",
-  "timerOption_30_seconds": "30 seconds",
+  "timerOption_30_minutes": "30 minutes",
   "timerOption_30_seconds_abbreviated": "30s",
-  "timerOption_5_minutes": "5 minutes",
+  "timerOption_30_seconds": "30 seconds",
   "timerOption_5_minutes_abbreviated": "5m",
-  "timerOption_5_seconds": "5 seconds",
+  "timerOption_5_minutes": "5 minutes",
   "timerOption_5_seconds_abbreviated": "5s",
-  "timerOption_6_hours": "6 hours",
+  "timerOption_5_seconds": "5 seconds",
   "timerOption_6_hours_abbreviated": "6h",
+  "timerOption_6_hours": "6 hours",
   "timerSetTo": "Disappearing message time set to $time$",
   "titleIsNow": "Group name is now '$name$'.",
   "to": "To:",
