feat: added conversation id to debugmessageinfo

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -104,6 +104,7 @@
   "contextMenuNoSuggestions": "No Suggestions",
   "continue": "Continue",
   "conversationsHeader": "Contacts and Groups: $count$",
+  "conversationId": "Conversation ID",
   "conversationsNone": "You don't have any conversations yet",
   "conversationsSettingsTitle": "Conversations",
   "copiedToClipboard": "Copied",
